# PO2

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  hash.h  perf.data  perf.data.old  readme.md  results.csv  test.py
benchmarks/: bench.cpp  generator.cpp  graphing.ipynb  last_attempt.ipynb  main.cpp  results.csv  results_gcc.csv
benchmarks/.ipynb_checkpoints/: graphing-checkpoint.ipynb
benchmarks/includes/: aggregate_tests.h  bigtype.h  generator.h  prepare.h  tests.h
benchmarks/includes/3thparty/: CLI11.hpp
bld/: benchmark  benchmarks  results.csv
chaining_hashmap/: chaining.cpp  chaining.h
hashmap/: a.out  chaining.cpp  chaining.h  chaining.h.gch
hashmap_implement/: cuckoo.cpp  cuckoo_hashing.h  cuckoo_hashing_API.h  cuckoo_hashing_weis_Api.h
hashmap_implementations/: Cuckoo.h  LPmap.cpp  LPmap.h  LPmap2.h  LPmap3.h  LPmap4.h  Nodemap.h  Pmap.h  chaining-simd.h  chaining.h  fastmod.LICENCE  fastmod.h  helpers.h  nodemap.h  nodemap1b.h  nodemap2.h  nodemap3.h  plf_colony.h  profiler.cpp  profiling.cpp  simd_snippet.cpp  snippet-tester.cpp  snippet.cpp  snippets.cpp  specialsauce_cont.h  test.cpp
hashmap_implementations/deprecated/: LPmap.h  LPmap2.h  LPmap3.h  nodemap.h  nodemap2.h
simple_api/: hashmap.h
test/: better_test_speed.cpp  better_tests.cpp  hash-test.cpp  hash-test.h  hash.h  hashes.json  hashmap_test.cpp  hashmap_test.h  hashtesting.ipynb  question.md  random.h  rehash_bench.cpp
test/.ipynb_checkpoints/: hashtesting-checkpoint.ipynb
tools/: random.h
